--- a/resources/public/main.html
+++ b/resources/public/main.html
@@ -3,7 +3,7 @@
     <link href="css/bootstrap.min.css" rel="stylesheet">
   </head>
   <body>
-    <h2>Main Reagent</h2>
+    <h2>Main Reagent beeing SLURP:ed</h2>
     <div id="app"></div>
     <script src="http://fb.me/react-0.9.0.js"></script>
     <script src="js/out/goog/base.js" type="text/javascript"></script>
