--- a/resources/public/main.html
+++ b/resources/public/main.html
@@ -1,9 +1,11 @@
 <html>
   <head>
     <link href="css/bootstrap.min.css" rel="stylesheet">
+     <!-- Custom styles -->
+    <link href="styles.css" rel="stylesheet">
   </head>
   <body>
-    <h2>Main Reagent beeing SLURP:ed</h2>
+    <h2>Tango loading</h2>
     <div id="app"></div>
     <script src="http://fb.me/react-0.9.0.js"></script>
     <script src="js/out/goog/base.js" type="text/javascript"></script>
@@ -13,9 +15,9 @@
     <script src="js/bootstrap.min.js"></script>
 
     <script type="text/javascript" src="js/app.js"></script>
-    <script type="text/javascript">goog.require('tango_client');</script>
+    <script type="text/javascript">goog.require('tango.client');</script>
     <script type="text/javascript">
-      tango_client.run();
+      tango.client.run();
     </script>
   </body>
 </html>
