Added initial uberjar

--- a/index.html
+++ b/index.html
@@ -1,1 +1,12 @@
-My Page
+ <!DOCTYPE html>
+<html>
+<head>
+<title>Tango: Latest build.</title>
+</head>
+<body>
+1. Download latest build <a href="tango-0.1.0-SNAPSHOT-standalone.jar">here</a><br>
+2. In command line run:<br>
+      java -jar tango-0.1.0-SNAPSHOT-standalone.jar 1337<br>
+3. Browse to http://localhost:1337 <br>
+</body>
+</html>
