--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
 </head>
 <body>
 1. Download latest build <a href="tango-0.1.0-SNAPSHOT-standalone.jar">here</a><br>
-1b. To enable logging, in command line run
-      mkdir loggs
+1b. To enable logging, in command line run<br>
+      mkdir loggs<br>
 2. In command line run:<br>
       java -jar tango-0.1.0-SNAPSHOT-standalone.jar 1337<br>
 3. Browse to http://localhost:1337 <br>
