--- a/resources/public/main.html
+++ b/resources/public/main.html
@@ -1,6 +1,7 @@
 <html>
   <head>
     <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link href="css/tango.css" rel="stylesheet">
      <!-- Custom styles -->
     <link href="styles.css" rel="stylesheet">
   </head>
