--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -3,8 +3,9 @@
   <head>
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="css/tango.css" rel="stylesheet">
-     <!-- Custom styles -->
-    <link href="styles.css" rel="stylesheet">
+    <!-- Custom styles -->
+    <link href="css/dashboard.css" rel="stylesheet">
+    <!-- <link href="styles.css" rel="stylesheet"> -->
   </head>
   <body>
     <div id="app">
