--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -4,7 +4,8 @@
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="css/tango.css" rel="stylesheet">
     <!-- Custom styles -->
-    <link href="css/dashboard.css" rel="stylesheet">
+    <link href="css/carousel.css" rel="stylesheet">
+    <!--link href="css/dashboard.css" rel="stylesheet" -->
     <!-- <link href="styles.css" rel="stylesheet"> -->
   </head>
   <body>
