Updated install instructions

--- a/index.html
+++ b/index.html
@@ -10,5 +10,11 @@
 2. In command line run:<br>
       java -jar tango-0.1.0-SNAPSHOT-standalone.jar 1337<br>
 3. Browse to http://localhost:1337 <br>
+4. Import a comptetition from a dance-perfect xml file <br>
+5. Select the comptetition and wait. (If its a big compttetition it might take a while)<br>
+6. Go to time scedule.<br>
+7. Open a second browser and go to http://localhost:1337/adjudicator<br>
+8. Place the browsers side by side.<br>
+9. Select a line in the scedule, and watch the adjudicator UI being updated.<br>
 </body>
 </html>
