--- a/resources/public/adjudicator.html
+++ b/resources/public/adjudicator.html
@@ -1,6 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <meta charset="utf-8" >
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <title>Adjudicator</title>
+
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="css/tango.css" rel="stylesheet">
     <!-- Custom styles -->
