--- a/resources/public/adjudicator.html
+++ b/resources/public/adjudicator.html
@@ -18,7 +18,7 @@
     <h2>Adjudicator UI Loading..</h2>
 </div>
 <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+<script src="js/jquery.min.js"></script>
 <script src="js/bootstrap.min.js"></script>
 
 <script type="text/javascript" src="js/adj.js"></script>
