--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -13,7 +13,7 @@
       <h2>Tango loading</h2>
     </div>
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+    <script src="js/jquery.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
 
     <script type="text/javascript" src="js/app.js"></script>
