--- a/resources/public/cards.html
+++ b/resources/public/cards.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1.0,user-scalable=no">
+    <link href="css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
 <script src="js/cards.js" type="text/javascript"></script>
