added more cards and some reload tweeking

--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -9,7 +9,7 @@
     <!-- <link href="styles.css" rel="stylesheet"> -->
   </head>
   <body>
-    <div id="app">
+    <div id="main-app">
       <h2>Tango loading</h2>
     </div>
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
