--- a/resources/public/runtime.html
+++ b/resources/public/runtime.html
@@ -10,17 +10,15 @@
     <link href="css/tango.css" rel="stylesheet">
     <!-- Custom styles -->
     <link href="css/carousel.css" rel="stylesheet">
-    <!--link href="css/dashboard.css" rel="stylesheet" -->
-    <!-- <link href="styles.css" rel="stylesheet"> -->
 </head>
 <body>
-<div id="app">
+<div id="main-app">
     <h2>Runtime UI Loading..</h2>
 </div>
-<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-<script src="js/jquery.min.js"></script>
-<script src="js/bootstrap.min.js"></script>
+    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+    <script src="js/jquery.min.js"></script>
+    <script src="js/bootstrap.min.js"></script>
 
-<script type="text/javascript" src="js/runtime.js"></script>
+    <script type="text/javascript" src="js/app.js"></script>
 </body>
 </html>
